kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 3000
