kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-gateway
spec:
  backend:
    serviceName: api-gateway
    servicePort: 80
